         launcher information as well as the ROMs information. ROLs are generated with AML,
         can be exported as XML and then used with AEL. AEL will trear ROLs are read-only
         (cannot be edited). If a ROL should be changed, then the XML is edited or regenerated
         and then imported again into AML.


[B]Advanced MAME Launcher | version 0.9.8 | 23 June 2018[/B]

FEATURE  [DOCS] Documentation in README.md improved.

FEATURE  [LEIA] Kodi Leia will cache the Python interpreter which means submodules will only
         be executed once and cached. sys.argv must be propagated from the entry point code
         into the submodules.
         See https://github.com/xbmc/xbmc/pull/13814
         and https://forum.kodi.tv/showthread.php?tid=303073&pid=2729071#pid2729071

FIX      Changed source code files to remove BOM. This is necessary to pass Travis tests of
         Kodi official repo.

FIX      ActivateWindow(busydialog) and Dialog.Close(busydialog) have been deprecated.
         Use DialogProgress() for all operations.
         See https://github.com/xbmc/xbmc/pull/13958
         and https://github.com/xbmc/xbmc/pull/13954
         and https://github.com/xbmc/xbmc/pull/10699

FIX      Do not use the xbmc.Player() in launcher addons. Instead, use functions like
         xbmc.getCondVisibility("Player.HasMedia"), xbmc.executebuiltin("PlayerControl(stop)"), etc.
         Change proposed by enen92.
         See https://github.com/xbmc/repo-plugins/pull/1886#discussion_r196591764


[B]Advanced MAME Launcher | version 0.9.7 | 09 June 2018[/B]

FEATURE  Implemented settings "display_rom_available" and "display_chd_available".

FEATURE  [LAUNCH] Implement "Action on Kodi playing media", "After/before launch delay (ms)", and
         "Suspend/resume Kodi audio engine".
         See https://github.com/Wintermute0110/plugin.program.AML/issues/3

FEATURE  [MAME FILTERING] Improve the Custom Filters (add more filtering options as defined